--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.0",
-    "standard": "^17.1.0"
-  },
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.3",
